<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        android:iconTint="@android:color/white"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/gallery_action_list"
        android:title="@string/gallery_list_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/gallery_action_grid"
        android:title="@string/gallery_grid_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/gallery_action_carousel"
        android:title="@string/gallery_carousel_view"
        app:showAsAction="never" />
</menu>
